[gd_scene load_steps=9 format=3 uid="uid://dl73eme14hwup"]

[ext_resource type="Script" path="res://scripts/stats.gd" id="1_4gg3l"]
[ext_resource type="StyleBox" uid="uid://l8vkqqi4prkx" path="res://styles/style_label_normal_box.tres" id="1_8movm"]
[ext_resource type="Texture2D" uid="uid://bht6umkfovrvf" path="res://sprites/exit.png" id="2_y6cxs"]
[ext_resource type="Texture2D" uid="uid://oc3ekqthmxfl" path="res://sprites/exit_pressed.png" id="4_cccmx"]
[ext_resource type="Texture2D" uid="uid://c23kwcfws5x1n" path="res://sprites/save_replay.png" id="4_ur71k"]
[ext_resource type="Texture2D" uid="uid://xcmnmdhs5hkk" path="res://sprites/save_stats.png" id="5_48gpa"]
[ext_resource type="Texture2D" uid="uid://bkom1i7ofdhg2" path="res://sprites/save_stats_pressed.png" id="6_mfpb2"]
[ext_resource type="Texture2D" uid="uid://mbmk666gc1gh" path="res://sprites/save_replay_pressed.png" id="8_ckspg"]

[node name="Stats" type="Node2D"]
script = ExtResource("1_4gg3l")

[node name="columbs" type="Node2D" parent="."]

[node name="buttons" type="Panel" parent="."]
modulate = Color(0.933333, 0.933333, 0.933333, 1)
offset_right = 192.0
offset_bottom = 640.0
theme_override_styles/panel = ExtResource("1_8movm")

[node name="leave" type="TextureButton" parent="buttons"]
modulate = Color(0.933333, 0.933333, 0.933333, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 96.0
texture_normal = ExtResource("2_y6cxs")
texture_pressed = ExtResource("4_cccmx")

[node name="csv" type="TextureButton" parent="buttons"]
modulate = Color(0.933333, 0.933333, 0.933333, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 352.0
offset_right = 160.0
offset_bottom = 480.0
texture_normal = ExtResource("5_48gpa")
texture_pressed = ExtResource("6_mfpb2")

[node name="replay" type="TextureButton" parent="buttons"]
modulate = Color(0.933333, 0.933333, 0.933333, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 480.0
offset_right = 160.0
offset_bottom = 608.0
texture_normal = ExtResource("4_ur71k")
texture_pressed = ExtResource("8_ckspg")

[node name="expo1" type="Label" parent="buttons"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 104.0
offset_right = 176.0
offset_bottom = 192.0
text = "Hover your cursor
over the edges of
the screen to move."
clip_text = true

[node name="expo2" type="Label" parent="buttons"]
layout_mode = 0
offset_left = 16.0
offset_top = 200.0
offset_right = 176.0
offset_bottom = 344.0
text = "Saved statistics are
stored in your
Appdata folder under
/Roaming/TRegions."
clip_text = true

[node name="save" type="Label" parent="buttons"]
layout_mode = 0
offset_left = 16.0
offset_top = 296.0
offset_right = 176.0
offset_bottom = 344.0
horizontal_alignment = 1
vertical_alignment = 2
clip_text = true

[node name="cam" type="Camera2D" parent="."]
position = Vector2(576, 320)

[connection signal="pressed" from="buttons/leave" to="." method="leave"]
[connection signal="pressed" from="buttons/csv" to="." method="_on_csv_pressed"]
[connection signal="pressed" from="buttons/replay" to="." method="_on_replay_pressed"]
